--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,26 @@
     }
   ],
   "require": {
-    "php": "^8.0"
+    "php": "^8.0",
+    "rebelinteractivegroup/rebel-branding": "*",
+    "rebelinteractivegroup/gravityforms": "2.6.8.1",
+    "rebelinteractivegroup/facetwp": "4.1",
+    "garrettweinberg/sage-bootstrap5-navwalker": "*",
+    "mwdelaney/sage-acf-gutenberg-blocks": "*",
+    "mwdelaney/sage-acf-menu-icons": "*",
+    "mwdelaney/sage-advanced-custom-fields": "*",
+    "mwdelaney/sage-fonts-preload": "*",
+    "mwdelaney/sage-wp-nav-submenu": "*",
+    "mwdelaney/google-tag-manager-snippets": "*",
+    "mwdelaney/add-sitemap-to-robots": "*",
+    "wpackagist-plugin/favicon-by-realfavicongenerator": "*",
+    "wpackagist-plugin/resmushit-image-optimizer": "*",
+    "wpackagist-plugin/regenerate-thumbnails": "*",
+    "wpackagist-plugin/disable-comments": "*",
+    "wpackagist-plugin/wordpress-seo": "*",
+    "wpackagist-plugin/yoast-test-helper":"*",
+    "wpackagist-plugin/redirection": "*",
+    "wpackagist-plugin/safe-svg": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "3.7.1"
