--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "devDependencies": {
     "@roots/bud": "6.12.2",
-    "@roots/bud-sass": "6.12.2",
-    "@roots/sage": "6.12.2"
+    "@roots/sage": "6.12.2",
+    "@roots/bud-sass": "6.12.2"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
-    "eslint": "^8.32.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.0",
+    "eslint": "^8.42.0",
     "hamburgers": "^1.2.1",
-    "prettier": "^2.8.3",
-    "stylelint": "^14.16.1",
-    "stylelint-config-standard-scss": "^6.1.0"
+    "prettier": "^2.8.8",
+    "stylelint": "^15.7.0",
+    "stylelint-config-standard-scss": "^9.0.0"
   }
 }
