--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "translate:mo": "wp i18n make-mo ./resources/lang ./resources/lang"
   },
   "devDependencies": {
-    "@roots/bud": "6.12.2",
-    "@roots/sage": "6.12.2",
-    "@roots/bud-sass": "6.12.2"
+    "@roots/bud": "6.15.1",
+    "@roots/bud-sass": "6.15.1",
+    "@roots/sage": "6.15.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
     "eslint": "^8.42.0",
     "hamburgers": "^1.2.1",
     "prettier": "^2.8.8",
