--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@roots/bud": "6.12.2",
     "@roots/bud-sass": "6.12.2",
+    "@roots/bud-support": "6.12.2",
     "@roots/sage": "6.12.2"
   },
   "dependencies": {
