--- a/package.json
+++ b/package.json
@@ -5,31 +5,32 @@
     "extends @roots/browserslist-config"
   ],
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=20.0.0"
   },
   "type": "module",
   "scripts": {
     "dev": "bud dev",
     "build": "bud build",
-    "translate": "yarn translate:pot && yarn translate:update",
-    "translate:pot": "wp i18n make-pot . ./resources/lang/sage.pot --include=\"app,resources\"",
-    "translate:update": "wp i18n update-po ./resources/lang/sage.pot ./resources/lang/*.po",
-    "translate:compile": "yarn translate:mo && yarn translate:js",
+    "translate": "npm run translate:pot && npm run translate:update",
+    "translate:pot": "wp i18n make-pot . ./resources/lang/sage.pot --include=\"theme.json,patterns,app,resources\"",
+    "translate:update": "for file in ./resources/lang/*.po; do wp i18n update-po ./resources/lang/sage.pot $file; done",
+    "translate:compile": "npm run translate:mo && npm run translate:js",
     "translate:js": "wp i18n make-json ./resources/lang --pretty-print",
     "translate:mo": "wp i18n make-mo ./resources/lang ./resources/lang"
   },
   "devDependencies": {
-    "@roots/bud": "6.12.2",
-    "@roots/sage": "6.12.2",
-    "@roots/bud-sass": "6.12.2"
+    "@roots/bud": "6.20.0",
+    "@roots/bud-postcss": "^6.20.0",
+    "@roots/bud-sass": "6.20.0",
+    "@roots/sage": "6.20.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.0",
-    "eslint": "^8.42.0",
+    "bootstrap": "^5.3.3",
+    "eslint": "^8.57.0",
     "hamburgers": "^1.2.1",
-    "prettier": "^2.8.8",
-    "stylelint": "^15.7.0",
-    "stylelint-config-standard-scss": "^9.0.0"
+    "prettier": "^3.2.5",
+    "stylelint": "^16.3.1",
+    "stylelint-config-standard-scss": "^13.0.0"
   }
 }
