--- a/composer.json
+++ b/composer.json
@@ -45,10 +45,13 @@
   },
   "require": {
     "php": "^8.0",
+    "roots/acorn": "v4.2.2",
+    "log1x/acf-composer": "^v3.0.23",
     "garrettweinberg/sage-bootstrap5-navwalker": "*"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "3.7.1"
+    "squizlabs/php_codesniffer": "3.7.1",
+    "log1x/acf-composer": "^v3.0.23"
   },
   "suggest": {
     "log1x/sage-directives": "A collection of useful Blade directives for WordPress and Sage (^1.0).",
@@ -64,6 +67,9 @@
   "scripts": {
     "lint": [
       "phpcs --extensions=php --standard=PSR12 app"
+    ],
+    "post-autoload-dump": [
+      "Roots\\Acorn\\ComposerScripts::postAutoloadDump"
     ]
   },
   "extra": {
