--- a/jsconfig.json
+++ b/jsconfig.json
@@ -23,6 +23,7 @@
       "@roots/bud-postcss",
       "@roots/bud-preset-recommend",
       "@roots/bud-preset-wordpress",
+      "@roots/bud-tailwindcss",
       "@roots/bud-wordpress-theme-json",
       "@roots/sage"
     ]
